perf: Optimize and finalize history management
#comment Use LinkedList for history in InMemoryHistoryManager for better performance, and make the history list final for immutability and thread safety

Affected: InMemoryHistoryManager