@@ -1,18 +1,18 @@
 package taskmanagement.manager;
 
 import taskmanagement.task.BaseTask;
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.HashMap;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<BaseTask> history = new ArrayList<>();
+    private final LinkedList<BaseTask> history = new LinkedList<>();
     private final HashMap<Integer, Integer> viewCounts = new HashMap<>();
 
     @Override
     public void add(BaseTask task) {
         if (history.size() == 10) {
-            history.remove(0);
+            history.removeFirst();
         }
         history.add(task);
         viewCounts.put(task.getId(), viewCounts.getOrDefault(task.getId(), 0) + 1);
@@ -20,7 +20,7 @@ public class InMemoryHistoryManager implements HistoryManager {
 
     @Override
     public List<BaseTask> getHistory() {
-        return new ArrayList<>(history);
+        return new LinkedList<>(history);
     }
 
     @Override
